gac_sb/objects/AppCIRmission__c.object
<CustomObject>
    <fields>
        <fullName>Total_brevetPM_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetPM__c,1,Total_brevetPM_option1__c,2,Total_brevetPM_option2__c,3,Total_brevetPM_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option1__c</fullName>
        <label>Total PM brevets personnel option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option2__c</fullName>
        <label>Total PM brevets personnel option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option3__c</fullName>
        <label>Total PM brevets personnel option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option1__c</fullName>
        <formula>IF( Annee_CIR__c = &apos;2009&apos; || Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option1__c + Total_miseDisposition_option1__c ) * 0.75) +  Total_jeuneDocteur_option1__c ,

((Total_salarie_option1__c + Total_miseDisposition_option1__c ) * 0.5) +
 Total_jeuneDocteur_option1__c +
 (Total_amortissement_option1__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option2__c</fullName>
        <formula>IF( Annee_CIR__c = &apos;2009&apos; || Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option2__c + Total_miseDisposition_option2__c ) * 0.75) +  Total_jeuneDocteur_option2__c ,
((Total_salarie_option2__c + Total_miseDisposition_option2__c ) * 0.5) +
 Total_jeuneDocteur_option2__c +
 (Total_amortissement_option2__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option3__c</fullName>
        <formula>IF( Annee_CIR__c = &apos;2009&apos; || Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option3__c + Total_miseDisposition_option3__c ) * 0.75) +  Total_jeuneDocteur_option3__c ,
((Total_salarie_option3__c + Total_miseDisposition_option3__c ) * 0.5) +
 Total_jeuneDocteur_option3__c +
 (Total_amortissement_option3__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_optionFinale__c</fullName>
        <formula>IF( Annee_CIR__c = &apos;2009&apos; || Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_optionFinale__c + Total_miseDisposition_optionFinale__c) * 0.75) + Total_jeuneDocteur_optionFinale__c,
((Total_salarie_optionFinale__c + Total_miseDisposition_optionFinale__c) * 0.5) +
Total_jeuneDocteur_optionFinale__c +
(Total_amortissement_optionFinale__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonct. option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option1__c</fullName>
        <label>Total heures R&amp;D option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option2__c</fullName>
        <label>Total heures R&amp;D option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option3__c</fullName>
        <label>Total heures R&amp;D option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option1__c</fullName>
        <label>Total jeunes docteurs option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option2__c</fullName>
        <label>Total jeunes docteurs option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option3__c</fullName>
        <label>Total jeunes docteurs option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_jeuneDocteur__c,1,Total_jeuneDocteur_option1__c,2,Total_jeuneDocteur_option2__c,3,Total_jeuneDocteur_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total jeunes docteurs option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option1__c</fullName>
        <label>Total mises à disposition option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option2__c</fullName>
        <label>Total mises à disposition option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option3__c</fullName>
        <label>Total mises à disposition option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_miseDisposition__c,1,Total_miseDisposition_option1__c,2,Total_miseDisposition_option2__c,3,Total_miseDisposition_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total mises à disposition option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option1__c</fullName>
        <label>Total normalisations option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option2__c</fullName>
        <label>Total normalisations option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option3__c</fullName>
        <label>Total normalisations option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_normalisation__c,1,Total_normalisation_option1__c,2,Total_normalisation_option2__c,3,Total_normalisation_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total normalisations option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option1__c</fullName>
        <label>Total prestataires agréés option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option2__c</fullName>
        <label>Total prestataires agréés option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option3__c</fullName>
        <label>Total prestataires agréés option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_prestataire_agree__c,1,Total_prestataire_agree_option1__c,2,Total_prestataire_agree_option2__c,3,Total_prestataire_agree_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total presta. agréés option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option1__c</fullName>
        <formula>MIN(Total_prestataire_agree_option1__c + Total_prestataire_public_option1__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option2__c</fullName>
        <formula>MIN(Total_prestataire_agree_option2__c + Total_prestataire_public_option2__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option3__c</fullName>
        <formula>MIN(Total_prestataire_agree_option3__c + Total_prestataire_public_option3__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_optionFinale__c</fullName>
        <formula>MIN(Total_prestataire_agree_optionFinale__c + Total_prestataire_public_optionFinale__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option retenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option1__c</fullName>
        <label>Total prestataires publics option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option2__c</fullName>
        <label>Total prestataires publics option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option3__c</fullName>
        <label>Total prestataires publics option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_prestataire_public__c,1,Total_prestataire_public_option1__c,2,Total_prestataire_public_option2__c,3,Total_prestataire_public_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total presta. publics option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_option1__c</fullName>
        <label>Total remboursements d&apos;avances option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_option2__c</fullName>
        <label>Total remboursements d&apos;avances option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_option3__c</fullName>
        <label>Total remboursements d&apos;avances option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_remboursementAvance__c,1,Total_remboursementAvance_option1__c,2,Total_remboursementAvance_option2__c,3,Total_remboursementAvance_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total remb. d&apos;avances option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option1__c</fullName>
        <label>Total salariés option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option2__c</fullName>
        <label>Total salariés option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option3__c</fullName>
        <label>Total salariés option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_salarie_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_salarie__c,1,Total_salarie_option1__c,2,Total_salarie_option2__c,3,Total_salarie_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total salariés option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option1__c</fullName>
        <label>Total subventions option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option2__c</fullName>
        <label>Total subventions option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option3__c</fullName>
        <label>Total subventions option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_subvention_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_subvention__c,1,Total_subvention_option1__c,2,Total_subvention_option2__c,3,Total_subvention_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total subventions option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option1__c</fullName>
        <label>Total veilles facture option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option2__c</fullName>
        <label>Total veilles facture option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option3__c</fullName>
        <label>Total veilles facture option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option1__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option1__c + Total_veille_personnel_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option2__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option2__c + Total_veille_personnel_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option3__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option3__c + Total_veille_personnel_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_veille__c,1,Total_veille_option1__c,2,Total_veille_option2__c,3,Total_veille_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option1__c</fullName>
        <label>Total veilles personnel option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option2__c</fullName>
        <label>Total veilles personnel option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option3__c</fullName>
        <label>Total veilles personnel option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_CF__c</fullName>
        <label>Type CF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>Demande renseignements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniteTempsDepensesPersonnel__c</fullName>
        <label>Unité de temps des dépenses de personnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heures</fullName>
                    <default>true</default>
                    <label>Heures</label>
                </value>
                <value>
                    <fullName>Jours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>prestataireAvocat__c</fullName>
        <label>Prestataire Avocat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prestataireCAC__c</fullName>
        <label>Prestataire CAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prestataireEC__c</fullName>
        <label>Prestataire EC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>renta_nb_interlocuteurs__c</fullName>
        <label>Nombre d&apos;interlocuteurs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_proj__c</fullName>
        <label>Nombre de projets à auditer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_redacs__c</fullName>
        <label>Nombre de projets à rédiger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_sites__c</fullName>
        <label>Nombre de sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renta_nb_valo__c</fullName>
        <label>Nombre de valorisations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>[OLD] Mission CIR</label>
    <nameField>
        <label>Nom de la mission CIR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>[OLD] Missions CIR</pluralLabel>
    <recordTypes>
        <fullName>AS</fullName>
        <active>true</active>
        <label>AS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIN</fullName>
        <active>true</active>
        <label>CIN</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIR</fullName>
        <active>true</active>
        <label>CIR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Equipe_Consulting__c</fullName>
        <label>Equipe Consulting</label>
    </sharingReasons>
    <validationRules>
        <fullName>AppCIR_Date_deb_fin_agrement_saisissable</fullName>
        <active>true</active>
        <description>Vérifie que la date de début d&apos;agrément et que la date de fin d&apos;agrément ne sont pas remplis si la case Société agréé n&apos;est pas coché</description>
        <errorConditionFormula>!Societe_agreee__c  &amp;&amp; ( !ISNULL( Date_debut_agrement__c ) || !ISNULL( Date_fin_agrement__c ) )</errorConditionFormula>
        <errorMessage>Vous ne pouvez pas saisir de date de début/fin d&apos;agrément si la société n&apos;est pas agréée</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppCIR_Date_relle_cloture</fullName>
        <active>true</active>
        <description>La date réelle de clôture mission ne peut pas être supérieure à aujourd’hui.</description>
        <errorConditionFormula>Date_echeance_DT__c &gt; TODAY() &amp;&amp;  RecordType.DeveloperName != &apos;CIR&apos;</errorConditionFormula>
        <errorMessage>La date réelle de clôture mission ne peut pas être supérieure à aujourd’hui.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppCIR_Date_rendu_DT</fullName>
        <active>true</active>
        <description>La date de rendu DT ne peut pas être supérieure à aujourd’hui.</description>
        <errorConditionFormula>Date_rendu_DT__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>La date de rendu DT ne peut pas être supérieure à aujourd’hui.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jours_estimes_sup_opportunite</fullName>
        <active>false</active>
        <errorConditionFormula>DATEVALUE(CreatedDate) &gt; Date(2016,05,31) &amp;&amp; ! !$User.ByPassValidationRules__c &amp;&amp; 
!ISBLANK(Temps_theorique_opportunite__c) &amp;&amp;
!ISNULL(Temps_theorique_opportunite__c) &amp;&amp;
Temps_theorique_mission__c &gt; Temps_theorique_opportunite__c</errorConditionFormula>
        <errorMessage>Le temps théorique de la mission ne peut pas être supérieur au temps théorique de l&apos;opportunité pour la première année de la mission.</errorMessage>
    </validationRules>
</CustomObject>